--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Add to home screen for Android and modern mobile browsers -->
-        <link rel="manifest" href="/static/manifest.json">
+        <link rel="manifest" href="./static/manifest.json">
         <meta name="theme-color" content="<!-- META_THEME_COLOR -->">
         <!-- Add to home screen for Safari on iOS -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="app-page-study-client-test">
-        <link rel="apple-touch-icon" href="/static/img/icons/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" href="./static/img/icons/apple-touch-icon-152x152.png">
         <!-- Add to home screen for Windows -->
-        <meta name="msapplication-TileImage" content="/static/img/icons/msapplication-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="./static/img/icons/msapplication-icon-144x144.png">
         <meta name="msapplication-TileColor" content="#000000">
         <% for (var jsFilePath of htmlWebpackPlugin.files.js) { %>
             <link rel="preload" href="<%= jsFilePath %>" as="script">
